# pa-agent-copilot-skill

./: .gitignore  README.md  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
config/: README.md  exception_state.example.json  settings.example.json  tv_symbol_aliases.example.json
pa_agent/: __init__.py  app_context.py
pa_agent/ai/: __init__.py  coherence_checks.py  decision_stance.py  decision_tree.py  deepseek_client.py  json_validator.py  kline_features.py  pattern_routing.py  prompt_assembler.py  router.py  stage1_normalizer.py  stage2_normalizer.py  token_counter.py  trace_normalize.py  trace_semantic_checks.py  validation_messages.py
pa_agent/config/: __init__.py  settings.py
pa_agent/data/: __init__.py  akshare_source.py  bar_close_wait.py  base.py  datetime_ts.py  factory.py  market_defaults.py  mt5.py  refresh_loop.py  snapshot.py  tradingview.py  (+4 more)
prompt_engineering/: 上涨通道交易策略.txt  上涨通道交易策略_compact.txt  上涨通道分析识别_compact.txt  下跌通道交易策略.txt  下跌通道交易策略_compact.txt  下跌通道分析识别_compact.txt  二元决策_闸门.txt  市场诊断框架.txt  市场诊断框架_compact.txt  提示词大纲_人设与思维方式_compact.txt  文件13-窄通道与宽通道策略_compact.txt  文件14-楔形形态分析交易_compact.txt  文件15-二次入场机会_compact.txt  文件16-K线信号识别_compact.txt  文件17-止损和止盈与仓位管理.txt  文件17-止损和止盈与仓位管理_compact.txt  文件18-突破失败与突破测试_compact.txt  文件19-H1H2-L1L2计数_compact.txt  文件20-AlwaysIn与20GB_compact.txt  文件21-铁丝网与无交易环境_compact.txt  文件22-信号失败后的磁力位_compact.txt  极速上涨交易策略.txt  极速上涨交易策略_compact.txt  极速上涨分析识别_compact.txt  极速下跌交易策略.txt  极速下跌交易策略_compact.txt  极速下跌分析识别_compact.txt  逐棒分析检查单_compact.txt  震荡区间交易策略_compact.txt  震荡区间分析识别_compact.txt
(+49 files in other folders)
